# packages/contract/kubb/schemas/categorySchema.ts
@@ -1,4 +1,4 @@
 import { z } from "zod";
 
 
-export const categorySchema = z.enum(["Cookie"]);
+export const categorySchema = z.enum(["Cookie", "Drink", "Gift"]);
