# packages/contract/kubb/types/Category.ts
@@ -1,5 +1,7 @@
 export const categoryEnum = {
-    "Cookie": "Cookie"
+    "Cookie": "Cookie",
+    "Drink": "Drink",
+    "Gift": "Gift"
 } as const;
 export type CategoryEnum = (typeof categoryEnum)[keyof typeof categoryEnum];
 export type Category = CategoryEnum;
